[package]
name = "hodl"
version = "0.1.0"
edition = "2018"
authors = ["Andrew J. Pierce <andrew.j.pierce@gmail.com>"]
description = "A CLI tool for accumulating cryptocurrency through the Coinbase Pro API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
reqwest = { version = "0.10.5", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
tokio = { version = "0.2", features = ["full"] }

[profile.release]
lto = true
strip = "symbols"
