[package]
name = "hodl"
version = "0.3.3"
edition = "2018"
authors = ["Andrew J. Pierce <andrew.j.pierce@gmail.com>"]
description = "A CLI tool for accumulating cryptocurrency through the Coinbase Pro API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
chrono = "0.4.11"
clap = "2.33.1"
csv = "1.1.3"
h2 = ">=0.3.17"
hyper = ">=0.14.10"
# We need to bring in our own version of openssl for rpi cross-compilations
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10.5", features = ["json"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
time = ">=0.2.23"
tokio = { version = ">=1.18.4, <1.19.0", features = ["full"] }
url = "2.3.1"

[profile.release]
lto = true
